user login and registration

--- a/templates/legacy/index-2.html
+++ b/templates/legacy/index-2.html
@@ -168,6 +168,9 @@ HREF="http://lists.village.virginia.edu/humanist/main.html"><B>Subscribe</B></A>
 <td align=center> <A HREF="help.html"><B>Help</B></A>
 <td align=center> <A HREF="http://www.allc.org/imhc/"><B>Institutional models</B></A>
 </table></center>
+
+<p>This site is <a href="//kdl.kcl.ac.uk/how-we-work/kdl-designed-developed-and-maintained/">maintained</a> under a service level agreement by <a href="//kdl.kcl.ac.uk/">King's Digital Lab</a>.
+
 </body>
 
 <!-- Mirrored from www.princeton.edu/humanist/index.html by HTTrack Website Copier/3.x [XR&CO'2007], Sat, 03 May 2008 20:32:00 GMT -->
