--- a/templates/legacy/index.html
+++ b/templates/legacy/index.html
@@ -82,6 +82,7 @@ href="http://www.digitalhumanities.org/humanist/Archives/Virginia/v12/subject.ht
 <p><b>Editor</b>: <a href="http://www.mccarty.org.uk">Willard McCarty</a> (King's College London, U.K.; Western Sydney University, Australia) <br> 
 <b>Software designer</b>: <a href="http://www.mind-crafts.com/aboutus.html">Malgosia Askanas</a> (Mind-Crafts)</p>
 
+<p>This site is <a href="//kdl.kcl.ac.uk/how-we-work/kdl-designed-developed-and-maintained/">maintained</a> under a service level agreement by <a href="//kdl.kcl.ac.uk/">King's Digital Lab</a>.
 
 
 </body>
