--- a/templates/legacy/announcement.html
+++ b/templates/legacy/announcement.html
@@ -61,5 +61,8 @@ May 2009<br>
 </p>
 <hr>
 [<A HREF="index.html">Humanist's homepage</a>]
+
+<p>This site is <a href="//kdl.kcl.ac.uk/how-we-work/kdl-designed-developed-and-maintained/">maintained</a> under a service level agreement by <a href="//kdl.kcl.ac.uk/">King's Digital Lab</a>.
+
 </body>
 
