Fixing broken url in templates

--- a/templates/legacy/restricted_login.html
+++ b/templates/legacy/restricted_login.html
@@ -48,7 +48,7 @@ HREF="/membership_form.php"><B>Subscribe</B></A></td>
             </div>
             <input type="submit" value="SUBMIT"  class="submit-btn"  />
             <br class="clear" />
-            <a href="membership_form.php">Subscribe</a> / <a href="forgot_password.php">Forgot password?</a>
+            <a href="/membership_form.php">Subscribe</a> / <a href="/forgot_password.php">Forgot password?</a>
             
         </form>
     
