--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,1 +1,114 @@
 /** Your custom scss here **/
+html,
+body
+{
+    color: #666666;
+    font-family: 'Helvetica', 'Verdana', 'sans-serif';
+    margin: 0;
+    padding: 0;
+}
+
+a
+{
+    text-decoration: none;
+    color: #052992;
+
+
+    &:hover
+    {
+        border-bottom: 1px dotted;
+    }
+}
+
+form.user_form
+{
+    input,
+    textarea
+    {
+        font-family: 'Courier New', 'Courier', mono;
+        font-size: 1.2rem;
+    }
+    
+    .error
+    {
+        color: #cc0000;
+    }
+
+    .success
+    {
+        color: #00aa00;
+    }
+}
+
+footer
+{
+    background: #eeeeee;
+    color: #666666;
+    margin: 50px 0 0 0;
+    text-align: center;
+
+    div
+    {
+        padding: 60px 20px;
+
+        a
+        {
+            color: #052992;
+        }
+    }
+}
+
+header
+{
+    h1
+    {
+        margin: 50px 0 0 0;
+    }
+}
+
+main
+{
+    padding: 0 20px;
+}
+
+nav
+{
+    background: #052992;
+    height: 50px;
+
+    ul
+    {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        text-align: right;
+
+        li
+        {
+            display: inline-block;
+            font-size: 1.2rem;
+            line-height: 50px;
+
+            &.left
+            {
+                float: left;
+                margin: 0 0 0 20px;
+            }
+
+            &:not(.left)
+            {
+                margin: 0 20px 0 0;
+            }
+
+            a
+            {
+                color: #ffffff;
+            }
+        }
+    }
+}
+
+section
+{
+    margin: 50px 0 0 0;
+}
