--- a/templates/humanist_app/user.html
+++ b/templates/humanist_app/user.html
@@ -15,5 +15,6 @@ User Panel
     <p>You are currently subscribed to Humanist using the email address {{request.user.email}}.</p>
 
     <p>To update your email address, please <a href="/user/update">click here</a>. You can also <a href="/user/password/">change your password</a>. If you no longer want to be a part of the Humanist community, you can <a href="/user/unsubscribe">unsubscribe</a>.</p>
+</section>
 
 {% endblock %}
