--- a/templates/humanist_app/user_unsubscribe.html
+++ b/templates/humanist_app/user_unsubscribe.html
@@ -20,5 +20,5 @@ Unsubscribe
         {% csrf_token %}
         <input type="submit" value="Confirm Unsubscription">
     </form>
-
+</section>
 {% endblock %}
