--- a/templates/humanist_app/user_update.html
+++ b/templates/humanist_app/user_update.html
@@ -28,5 +28,5 @@ User Update
         <input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" name="new_email">
         <input type="submit">
     </form>
-
+</section>
 {% endblock %}
